translate feedback form, fix header text on iphone

--- a/main/static/css/agency.css
+++ b/main/static/css/agency.css
@@ -299,7 +299,7 @@ header .intro-text .intro-heading {
 
 @media(max-width:768px) {
     header .intro-text .intro-heading {
-        margin-left: 140px;
+        margin-left: 150px;
     }
 }
 
